removed id and password from nodemailer

--- a/readme
+++ b/readme
@@ -6,3 +6,5 @@ After Cloning the git Repo,
 Install all the dependencies- npm i.
 'nodemon' will run the file in backend.
 This will auto launch the front end part using view engine.
+
+Fot the email alert, add the sender email id and password and allow third party app to send mail in gmail.
